fix alignment add links

--- a/static/main.css
+++ b/static/main.css
@@ -4,6 +4,10 @@ html, body {
   height: 100%;
 }
 
+.padding-right {
+  padding-right: 10px;
+}
+
 .header {
   border-bottom: solid;
   border-width: 1px;
@@ -57,8 +61,19 @@ html, body {
   margin: auto;
 }
 
+.footer-border {
+  border-top: solid;
+  border-width: 1px;
+}
+
+.footer-border>ul {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
 .footer {
   bottom: 0;
+  padding-top: 10px;
   margin-top: 80px;
   height: 30px;
 }
